k8s/orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service-db
spec:
  selector:
    matchLabels:
      app: orders-service-db
  template:
    metadata:
      labels:
        app: orders-service-db
    spec:
      containers:
        - name: orders-service-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: orders-service-db-volume
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 20
            timeoutSeconds: 1
      volumes:
        - name: orders-service-db-volume
          persistentVolumeClaim:
            claimName: orders-db-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
spec:
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: ire97/orders_management:v9
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /ping1
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ping1
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 3
